Fix table header on smaller displays

--- a/src/components/CoinsList.css
+++ b/src/components/CoinsList.css
@@ -48,7 +48,17 @@
         align-items: center;
         font-size: 15px;
     }
-    
+    .table-head{
+        display: flex;
+        align-items: center;
+        font-size: 18px;
+        margin-top: 5%;
+        font-weight: 600;
+        margin-left: 2%;
+        margin-right: 2%;
+        width: 100%;
+    }
+
     .table-container{
         display: flex;
         width: 100vw;
